Add trusted handlers
