# human_api/models/__init__.py
@@ -13,8 +13,9 @@ from human_api.models.int_data_response import IntDataResponse
 from human_api.models.job_create_body import JobCreateBody
 from human_api.models.job_list_response import JobListResponse
 from human_api.models.job_status_response import JobStatusResponse
-from human_api.models.store_job_intermediate_results_body import StoreJobIntermediateResults
-from human_api.models.bulk_payout_job_body import BulkPayoutJob
+from human_api.models.store_job_intermediate_results_body import StoreJobIntermediateResultsBody
+from human_api.models.bulk_payout_job_body import BulkPayoutJobBody
+from human_api.models.add_job_trusted_handlers_body import AddJobTrustedHandlersBody
 from human_api.models.manifest_validity_response import ManifestValidityResponse
 from human_api.models.network_list_response import NetworkListResponse
 from human_api.models.network_list_response_networks import NetworkListResponseNetworks
