# human_api/models/bulk_payout_job_body.py
@@ -9,7 +9,7 @@ from human_api.models.base_model_ import Model
 from human_api import util
 
 
-class BulkPayoutJob(Model):
+class BulkPayoutJobBody(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -22,21 +22,21 @@ class BulkPayoutJob(Model):
                  results_url: str = None,
                  payouts_url: str = None,
                  network_id: int = 0):  # noqa: E501
-        """BulkPayoutJob - a model defined in Swagger
+        """BulkPayoutJobBody - a model defined in Swagger
 
-        :param gas_payer: The gas_payer of this BulkPayoutJob.  # noqa: E501
+        :param gas_payer: The gas_payer of this BulkPayoutJobBody.  # noqa: E501
         :type gas_payer: str
-        :param gas_payer_private: The gas_payer_private of this BulkPayoutJob.  # noqa: E501
+        :param gas_payer_private: The gas_payer_private of this BulkPayoutJobBody.  # noqa: E501
         :type gas_payer_private: str
-        :param address: The address of this BulkPayoutJob.  # noqa: E501
+        :param address: The address of this BulkPayoutJobBody.  # noqa: E501
         :type address: str
-        :param rep_oracle_pub: The rep_oracle_pub of this BulkPayoutJob.  # noqa: E501
+        :param rep_oracle_pub: The rep_oracle_pub of this BulkPayoutJobBody.  # noqa: E501
         :type rep_oracle_pub: str
-        :param results_url: The results_url of this BulkPayoutJob.  # noqa: E501
+        :param results_url: The results_url of this BulkPayoutJobBody.  # noqa: E501
         :type results_url: str
-        :param payouts_url: The payouts_url of this BulkPayoutJob.  # noqa: E501
+        :param payouts_url: The payouts_url of this BulkPayoutJobBody.  # noqa: E501
         :type payouts_url: str
-        :param network_id: The network_id of this BulkPayoutJob.  # noqa: E501
+        :param network_id: The network_id of this BulkPayoutJobBody.  # noqa: E501
         :type network_id: int
         """
         self.swagger_types = {
@@ -67,32 +67,32 @@ class BulkPayoutJob(Model):
         self._network_id = network_id
 
     @classmethod
-    def from_dict(cls, dikt) -> 'BulkPayoutJob':
+    def from_dict(cls, dikt) -> 'BulkPayoutJobBody':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The store_job_intermediate_results_body of this BulkPayoutJob.  # noqa: E501
-        :rtype: BulkPayoutJob
+        :return: The store_job_intermediate_results_body of this BulkPayoutJobBody.  # noqa: E501
+        :rtype: BulkPayoutJobBody
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def gas_payer(self) -> str:
-        """Gets the gas_payer of this BulkPayoutJob.
+        """Gets the gas_payer of this BulkPayoutJobBody.
 
 
-        :return: The gas_payer of this BulkPayoutJob.
+        :return: The gas_payer of this BulkPayoutJobBody.
         :rtype: str
         """
         return self._gas_payer
 
     @gas_payer.setter
     def gas_payer(self, gas_payer: str):
-        """Sets the gas_payer of this BulkPayoutJob.
+        """Sets the gas_payer of this BulkPayoutJobBody.
 
 
-        :param gas_payer: The gas_payer of this BulkPayoutJob.
+        :param gas_payer: The gas_payer of this BulkPayoutJobBody.
         :type gas_payer: str
         """
 
@@ -100,20 +100,20 @@ class BulkPayoutJob(Model):
 
     @property
     def gas_payer_private(self) -> str:
-        """Gets the gas_payer_private of this BulkPayoutJob.
+        """Gets the gas_payer_private of this BulkPayoutJobBody.
 
 
-        :return: The gas_payer_private of this BulkPayoutJob.
+        :return: The gas_payer_private of this BulkPayoutJobBody.
         :rtype: str
         """
         return self._gas_payer_private
 
     @gas_payer_private.setter
     def gas_payer_private(self, gas_payer_private: str):
-        """Sets the gas_payer_private of this BulkPayoutJob.
+        """Sets the gas_payer_private of this BulkPayoutJobBody.
 
 
-        :param gas_payer_private: The gas_payer_private of this BulkPayoutJob.
+        :param gas_payer_private: The gas_payer_private of this BulkPayoutJobBody.
         :type gas_payer_private: str
         """
 
@@ -121,20 +121,20 @@ class BulkPayoutJob(Model):
 
     @property
     def address(self) -> str:
-        """Gets the address of this BulkPayoutJob.
+        """Gets the address of this BulkPayoutJobBody.
 
 
-        :return: The address of this BulkPayoutJob.
+        :return: The address of this BulkPayoutJobBody.
         :rtype: str
         """
         return self._address
 
     @address.setter
     def address(self, address: str):
-        """Sets the address of this BulkPayoutJob.
+        """Sets the address of this BulkPayoutJobBody.
 
 
-        :param address: The address of this BulkPayoutJob.
+        :param address: The address of this BulkPayoutJobBody.
         :type address: str
         """
 
@@ -142,20 +142,20 @@ class BulkPayoutJob(Model):
 
     @property
     def rep_oracle_pub(self) -> str:
-        """Gets the rep_oracle_pub of this BulkPayoutJob.
+        """Gets the rep_oracle_pub of this BulkPayoutJobBody.
 
 
-        :return: The rep_oracle_pub of this BulkPayoutJob.
+        :return: The rep_oracle_pub of this BulkPayoutJobBody.
         :rtype: str
         """
         return self._rep_oracle_pub
 
     @rep_oracle_pub.setter
     def rep_oracle_pub(self, rep_oracle_pub: str):
-        """Sets the rep_oracle_pub of this BulkPayoutJob.
+        """Sets the rep_oracle_pub of this BulkPayoutJobBody.
 
 
-        :param rep_oracle_pub: The rep_oracle_pub of this BulkPayoutJob.
+        :param rep_oracle_pub: The rep_oracle_pub of this BulkPayoutJobBody.
         :type rep_oracle_pub: str
         """
 
@@ -163,20 +163,20 @@ class BulkPayoutJob(Model):
 
     @property
     def results_url(self) -> str:
-        """Gets the results_url of this BulkPayoutJob.
+        """Gets the results_url of this BulkPayoutJobBody.
 
 
-        :return: The results_url of this BulkPayoutJob.
+        :return: The results_url of this BulkPayoutJobBody.
         :rtype: str
         """
         return self._results_url
 
     @results_url.setter
     def results_url(self, results_url: str):
-        """Sets the results_url of this BulkPayoutJob.
+        """Sets the results_url of this BulkPayoutJobBody.
 
 
-        :param results_url: The results_url of this BulkPayoutJob.
+        :param results_url: The results_url of this BulkPayoutJobBody.
         :type results_url: str
         """
 
@@ -184,20 +184,20 @@ class BulkPayoutJob(Model):
 
     @property
     def payouts_url(self) -> str:
-        """Gets the payouts_url of this BulkPayoutJob.
+        """Gets the payouts_url of this BulkPayoutJobBody.
 
 
-        :return: The payouts_url of this BulkPayoutJob.
+        :return: The payouts_url of this BulkPayoutJobBody.
         :rtype: str
         """
         return self._payouts_url
 
     @payouts_url.setter
     def payouts_url(self, payouts_url: str):
-        """Sets the payouts_url of this BulkPayoutJob.
+        """Sets the payouts_url of this BulkPayoutJobBody.
 
 
-        :param payouts_url: The payouts_url of this BulkPayoutJob.
+        :param payouts_url: The payouts_url of this BulkPayoutJobBody.
         :type payouts_url: str
         """
 
@@ -205,20 +205,20 @@ class BulkPayoutJob(Model):
 
     @property
     def network_id(self) -> int:
-        """Gets the network_id of this BulkPayoutJob.
+        """Gets the network_id of this BulkPayoutJobBody.
 
 
-        :return: The network_id of this BulkPayoutJob.
+        :return: The network_id of this BulkPayoutJobBody.
         :rtype: int
         """
         return self._network_id
 
     @network_id.setter
     def network_id(self, network_id: int):
-        """Sets the network_id of this BulkPayoutJob.
+        """Sets the network_id of this BulkPayoutJobBody.
 
 
-        :param network_id: The network_id of this BulkPayoutJob.
+        :param network_id: The network_id of this BulkPayoutJobBody.
         :type network_id: int
         """
 
