# human_api/models/store_job_intermediate_results_body.py
@@ -9,7 +9,7 @@ from human_api.models.base_model_ import Model
 from human_api import util
 
 
-class StoreJobIntermediateResults(Model):
+class StoreJobIntermediateResultsBody(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -21,19 +21,19 @@ class StoreJobIntermediateResults(Model):
                  rep_oracle_pub: str = None,
                  results_url: str = None,
                  network_id: int = 0):  # noqa: E501
-        """StoreJobIntermediateResults - a model defined in Swagger
+        """StoreJobIntermediateResultsBody - a model defined in Swagger
 
-        :param gas_payer: The gas_payer of this StoreJobIntermediateResults.  # noqa: E501
+        :param gas_payer: The gas_payer of this StoreJobIntermediateResultsBody.  # noqa: E501
         :type gas_payer: str
-        :param gas_payer_private: The gas_payer_private of this StoreJobIntermediateResults.  # noqa: E501
+        :param gas_payer_private: The gas_payer_private of this StoreJobIntermediateResultsBody.  # noqa: E501
         :type gas_payer_private: str
-        :param address: The address of this StoreJobIntermediateResults.  # noqa: E501
+        :param address: The address of this StoreJobIntermediateResultsBody.  # noqa: E501
         :type address: str
-        :param rep_oracle_pub: The rep_oracle_pub of this StoreJobIntermediateResults.  # noqa: E501
+        :param rep_oracle_pub: The rep_oracle_pub of this StoreJobIntermediateResultsBody.  # noqa: E501
         :type rep_oracle_pub: str
-        :param results_url: The results_url of this StoreJobIntermediateResults.  # noqa: E501
+        :param results_url: The results_url of this StoreJobIntermediateResultsBody.  # noqa: E501
         :type results_url: str
-        :param network_id: The network_id of this StoreJobIntermediateResults.  # noqa: E501
+        :param network_id: The network_id of this StoreJobIntermediateResultsBody.  # noqa: E501
         :type network_id: int
         """
         self.swagger_types = {
@@ -61,32 +61,32 @@ class StoreJobIntermediateResults(Model):
         self._network_id = network_id
 
     @classmethod
-    def from_dict(cls, dikt) -> 'StoreJobIntermediateResults':
+    def from_dict(cls, dikt) -> 'StoreJobIntermediateResultsBody':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The store_job_intermediate_results_body of this StoreJobIntermediateResults.  # noqa: E501
-        :rtype: StoreJobIntermediateResults
+        :return: The store_job_intermediate_results_body of this StoreJobIntermediateResultsBody.  # noqa: E501
+        :rtype: StoreJobIntermediateResultsBody
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def gas_payer(self) -> str:
-        """Gets the gas_payer of this StoreJobIntermediateResults.
+        """Gets the gas_payer of this StoreJobIntermediateResultsBody.
 
 
-        :return: The gas_payer of this StoreJobIntermediateResults.
+        :return: The gas_payer of this StoreJobIntermediateResultsBody.
         :rtype: str
         """
         return self._gas_payer
 
     @gas_payer.setter
     def gas_payer(self, gas_payer: str):
-        """Sets the gas_payer of this StoreJobIntermediateResults.
+        """Sets the gas_payer of this StoreJobIntermediateResultsBody.
 
 
-        :param gas_payer: The gas_payer of this StoreJobIntermediateResults.
+        :param gas_payer: The gas_payer of this StoreJobIntermediateResultsBody.
         :type gas_payer: str
         """
 
@@ -94,20 +94,20 @@ class StoreJobIntermediateResults(Model):
 
     @property
     def gas_payer_private(self) -> str:
-        """Gets the gas_payer_private of this StoreJobIntermediateResults.
+        """Gets the gas_payer_private of this StoreJobIntermediateResultsBody.
 
 
-        :return: The gas_payer_private of this StoreJobIntermediateResults.
+        :return: The gas_payer_private of this StoreJobIntermediateResultsBody.
         :rtype: str
         """
         return self._gas_payer_private
 
     @gas_payer_private.setter
     def gas_payer_private(self, gas_payer_private: str):
-        """Sets the gas_payer_private of this StoreJobIntermediateResults.
+        """Sets the gas_payer_private of this StoreJobIntermediateResultsBody.
 
 
-        :param gas_payer_private: The gas_payer_private of this StoreJobIntermediateResults.
+        :param gas_payer_private: The gas_payer_private of this StoreJobIntermediateResultsBody.
         :type gas_payer_private: str
         """
 
@@ -115,20 +115,20 @@ class StoreJobIntermediateResults(Model):
 
     @property
     def address(self) -> str:
-        """Gets the address of this StoreJobIntermediateResults.
+        """Gets the address of this StoreJobIntermediateResultsBody.
 
 
-        :return: The address of this StoreJobIntermediateResults.
+        :return: The address of this StoreJobIntermediateResultsBody.
         :rtype: str
         """
         return self._address
 
     @address.setter
     def address(self, address: str):
-        """Sets the address of this StoreJobIntermediateResults.
+        """Sets the address of this StoreJobIntermediateResultsBody.
 
 
-        :param address: The address of this StoreJobIntermediateResults.
+        :param address: The address of this StoreJobIntermediateResultsBody.
         :type address: str
         """
 
@@ -136,20 +136,20 @@ class StoreJobIntermediateResults(Model):
 
     @property
     def rep_oracle_pub(self) -> str:
-        """Gets the rep_oracle_pub of this StoreJobIntermediateResults.
+        """Gets the rep_oracle_pub of this StoreJobIntermediateResultsBody.
 
 
-        :return: The rep_oracle_pub of this StoreJobIntermediateResults.
+        :return: The rep_oracle_pub of this StoreJobIntermediateResultsBody.
         :rtype: str
         """
         return self._rep_oracle_pub
 
     @rep_oracle_pub.setter
     def rep_oracle_pub(self, rep_oracle_pub: str):
-        """Sets the rep_oracle_pub of this StoreJobIntermediateResults.
+        """Sets the rep_oracle_pub of this StoreJobIntermediateResultsBody.
 
 
-        :param rep_oracle_pub: The rep_oracle_pub of this StoreJobIntermediateResults.
+        :param rep_oracle_pub: The rep_oracle_pub of this StoreJobIntermediateResultsBody.
         :type rep_oracle_pub: str
         """
 
@@ -157,20 +157,20 @@ class StoreJobIntermediateResults(Model):
 
     @property
     def results_url(self) -> str:
-        """Gets the results_url of this StoreJobIntermediateResults.
+        """Gets the results_url of this StoreJobIntermediateResultsBody.
 
 
-        :return: The results_url of this StoreJobIntermediateResults.
+        :return: The results_url of this StoreJobIntermediateResultsBody.
         :rtype: str
         """
         return self._results_url
 
     @results_url.setter
     def results_url(self, results_url: str):
-        """Sets the results_url of this StoreJobIntermediateResults.
+        """Sets the results_url of this StoreJobIntermediateResultsBody.
 
 
-        :param results_url: The results_url of this StoreJobIntermediateResults.
+        :param results_url: The results_url of this StoreJobIntermediateResultsBody.
         :type results_url: str
         """
 
@@ -178,20 +178,20 @@ class StoreJobIntermediateResults(Model):
 
     @property
     def network_id(self) -> int:
-        """Gets the network_id of this StoreJobIntermediateResults.
+        """Gets the network_id of this StoreJobIntermediateResultsBody.
 
 
-        :return: The network_id of this StoreJobIntermediateResults.
+        :return: The network_id of this StoreJobIntermediateResultsBody.
         :rtype: int
         """
         return self._network_id
 
     @network_id.setter
     def network_id(self, network_id: int):
-        """Sets the network_id of this StoreJobIntermediateResults.
+        """Sets the network_id of this StoreJobIntermediateResultsBody.
 
 
-        :param network_id: The network_id of this StoreJobIntermediateResults.
+        :param network_id: The network_id of this StoreJobIntermediateResultsBody.
         :type network_id: int
         """
 
